# lisq

./: .travis.yml  LICENSE  README.md  README.rst  lisq.py  query.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
listql/: __init__.py
src/listql_tests/: test_listql.py
tests/: test_lisq.py  test_query.py
