[metadata]
name = listql
summary = Query list like database
description-file =
    README.md
author = yujunz
author-email = zhangyujun@gmail.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

[files]
packages =
    lisq

[tool:pytest]
addopts = --ignore=legacy

[extras]
testing =
    deepdiff
    pytest
