[metadata]
name = listql
summary = Query list like database
description-file = README.rst
author = Yujun Zhang
author-email = zhangyujun@gmail.com
home-page = https://github.com/yujunz/listql
license = MIT
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    listql

[extras]
testing =
    deepdiff
    pytest
